apps/base/taskchampion/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskchampion-sync-server
  namespace: taskchampion
  labels:
    app.kubernetes.io/name: taskchampion-sync-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: taskchampion-sync-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taskchampion-sync-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1092
        runAsGroup: 1092
        fsGroup: 1092
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sync-server
          image: ghcr.io/gothenburgbitfactory/taskchampion-sync-server:main
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/taskchampion-sync-server"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 20
          volumeMounts:
            - name: data
              mountPath: /var/lib/taskchampion-sync-server
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /var/run
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: taskchampion-sync-server-pvc
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
