apps/base/taskchampion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskchampion-sync-server
  namespace: taskchampion
  labels:
    app.kubernetes.io/name: taskchampion-sync-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: taskchampion-sync-server
